	* lib/diagdkrenderer.c : different 'const' qualifiers
	* lib/persistence.[ch] lib/message.c : constness
	* app/autosave.c : doe not take a GCallback, but a GSourseFunc
	* app/layer_dialog.c : gtk_button_set_image() takes a GtkWidget*
	* app/textedit.c : s/ObjectChangeApplyFunc/UndoApplyFunc/ etc.
	* plug-ins/wmf/wmf.cpp : explicit cast 'gunichar2 *' to 'W32::LPCWSTR'

2009-02-07  Hans Breuer  <hans@breuer.org>

	* lib/dia_svg.c : map special svg font name "sanserif" to special 
	dia font name "sans"
	
	* lib/dia_image.c(dia_image_get_broken) : was broken
	* plug-ins/svg/svg-import.c : don't try to create_standard_image() with
	fileanme==NULL, rather set an invalid name. Better than crashing on
	<svg:image data="..."/>
	* lib/libdia.def : s/dia_image_release/dia_image_unref/

	[two less leaks - thanks valgrind]
	* lib/dia_image.c : free filename
	* plug-ins/svg/svg-import.c(read_poly_svg) : free points

	* plug-ins/xslt/xsltdialog.c : add #undef GTK_DISABLE_DEPRECATED to 
	fix bug #570850 - should be ported some day

	* lib/dia_image.c : turn DiaImage into a GObject, plugs memory leak
	fixing bug #570850

	* plug-ins/svg/svg-import.c : actually implement read_image_svg(),
	part of bug #570863 (strange this was not reporeted before)
	(read_text_svg) : was creating two much whitespace for <tspan/>

	* lib/diatypes.h : typedef _DiaImage DiaImage, i.e. make DiaImage 
	follow the naming pattern of every other struct in Dia's source ...
	* lib/dia_image.[ch] : ... and also sprinkled const and rename
	dia_image_release to dia_image_unref (too seldom used!)
	* objects/SISSI/sissi.h objects/SISSI/sissi.c objects/KAOS/metabinrel.c
	  objects/standard/image.c objects/custom/shape_info.h
	  lib/diarenderer.[ch] lib/diasvgrenderer.c lib/diagdkrenderer.c
	  plug-ins/python/pydia-render.c plug-ins/python/pydia-image.[ch]
	  plug-ins/dxf/dxf-export.c plug-ins/drs/dia-render-script-renderer.c
	  plug-ins/hpgl/hpgl.c plug-ins/metapost/render_metapost.c