@@ -9,7 +9,7 @@ PACKAGE = libdia
 
 PKG_CFLAGS = -FImsvc_recommended_pragmas.h \
 	-I.. \
-	-DGTK_DISABLE_DEPRECATED \
+	-DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED \
 	$(GTK2_CFLAGS) \
 	$(LIBXML2_CFLAGS) \
 	$(ZLIB_CFLAGS) \
